--- a/gadka_szmatka/templates/gadka_szmatka/base.html
+++ b/gadka_szmatka/templates/gadka_szmatka/base.html
@@ -12,29 +12,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
   </head>
-  <body class="h-100">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-between">
-      <a class="navbar-brand" href="#">Him</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+  <body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <span class="navbar-brand">Him</span>
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Conversations <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="{% url 'messaging:conversation-list' %}">Conversations <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">People</a>
+            <a class="nav-link" href="{% url 'users:list' %}">People</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Bots</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">{{ request.user }}</a>
+            <a class="nav-link" href="{% url 'bots:list' %}">Bots</a>
           </li>
         </ul>
+        <span class="navbar-text mr-sm-3">{{ request.user }}</span>
+        <a href="{% url 'users:logout' %}" class="btn btn-outline-light">Logout</a>
       </div>
-      <a href="{% url 'users:logout' %}" class="btn btn-outline-light">Logout</a>
     </nav>
     {% block content %}
     {% endblock %}
