--- a/gadka_szmatka/templates/gadka_szmatka/base.html
+++ b/gadka_szmatka/templates/gadka_szmatka/base.html
@@ -17,13 +17,13 @@
       <span class="navbar-brand">Him</span>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item {% if 'conversation' in request.path %}active{% endif %}">
             <a class="nav-link" href="{% url 'messaging:conversation-list' %}">Conversations <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if 'users' in request.path %}active{% endif %}">
             <a class="nav-link" href="{% url 'users:list' %}">People</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item {% if 'bots' in request.path %}active{% endif %}">
             <a class="nav-link" href="{% url 'bots:list' %}">Bots</a>
           </li>
         </ul>
