--- a/users/templates/users/users.html
+++ b/users/templates/users/users.html
@@ -2,6 +2,11 @@
 
 {% block content %}
 <div class="container">
+  {% if 'query' in request.GET %}
+    <div class="alert alert-light mt-sm-3" role="alert">
+      Search results for <b>{{ request.GET.query }}</b>
+    </div>
+  {% endif %}
   <div class="card-columns mt-sm-3">
     {% for user in users %}
       <div class="card">
