--- a/gadka_szmatka/templates/gadka_szmatka/base.html
+++ b/gadka_szmatka/templates/gadka_szmatka/base.html
@@ -1,50 +1,33 @@
-<!doctype html>
-<style>
-  html, body {
-    height: 100%;
-    margin: 0
-  }
-</style>
-<html lang="en" class="h-100">
-  <head>
-    <title>Hello, world!</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
-  </head>
-  <body class="bg-light">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <span class="navbar-brand">Him</span>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mr-auto">
-          <li class="nav-item {% if 'conversation' in request.path %}active{% endif %}">
-            <a class="nav-link" href="{% url 'messaging:conversation-list' %}">Conversations <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item {% if 'users' in request.path %}active{% endif %}">
-            <a class="nav-link" href="{% url 'users:list' %}">Friends</a>
-          </li>
-          <li class="nav-item {% if 'bots' in request.path %}active{% endif %}">
-            <a class="nav-link" href="{% url 'bots:list' %}">Bots</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              {{ request.user }}
-            </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="{% url 'users:logout' %}">Logout</a>
-            </div>
-          </li>
-        </ul>
-        <form class="form-inline" action="{% url 'users:list' %}" method="GET">
-          <input class="form-control mr-sm-2" name="query" type="search" placeholder="User name" aria-label="Search">
-          <button class="btn btn-outline-light" type="submit">Search</button>
-        </form>
-      </div>
-    </nav>
-    {% block content %}
-    {% endblock %}
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-  </body>
-</html>
+{% extends 'gadka_szmatka/core.html' %}
+{% block body %}
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <span class="navbar-brand">Him</span>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item {% if 'conversation' in request.path %}active{% endif %}">
+          <a class="nav-link" href="{% url 'messaging:conversations-list' %}">Conversations <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item {% if 'users' in request.path %}active{% endif %}">
+          <a class="nav-link" href="{% url 'users:list' %}">Friends</a>
+        </li>
+        <li class="nav-item {% if 'bots' in request.path %}active{% endif %}">
+          <a class="nav-link" href="{% url 'bots:list' %}">Bots</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ request.user }}
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="{% url 'users:logout' %}">Logout</a>
+          </div>
+        </li>
+      </ul>
+      <form class="form-inline" action="{% url 'users:list' %}" method="GET">
+        <input class="form-control mr-sm-2" name="query" type="search" placeholder="Name" aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">Search for friends</button>
+      </form>
+    </div>
+  </nav>
+  {% block content %}
+  {% endblock %}
+{% endblock %}
