--- a/talkyo/templates/talkyo/base.html
+++ b/talkyo/templates/talkyo/base.html
@@ -1,7 +1,7 @@
-{% extends 'gadka_szmatka/core.html' %}
+{% extends 'talkyo/core.html' %}
 {% block body %}
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <span class="navbar-brand">Him</span>
+    <span class="navbar-brand">talkyo</span>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% if 'conversation' in request.path %}active{% endif %}">
