--- a/talkyo/templates/talkyo/base.html
+++ b/talkyo/templates/talkyo/base.html
@@ -5,7 +5,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% if 'conversation' in request.path %}active{% endif %}">
-          <a class="nav-link" href="{% url 'messaging:conversations-list' %}">Conversations <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="{% url 'conversations:conversations-list' %}">Conversations <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item {% if 'users' in request.path %}active{% endif %}">
           <a class="nav-link" href="{% url 'users:list' %}">Friends</a>
