--- a/users/templates/users/users.html
+++ b/users/templates/users/users.html
@@ -17,7 +17,7 @@
         <div class="card">
           <div class="card-body">
             <h4 class="card-title">{{ user }}</h4>
-            <a href="{% url 'messaging:user-conversation-start' user_id=user.id %}" class="card-link">Start a conversation</a>
+            <a href="{% url 'conversations:user-conversation-start' user_id=user.id %}" class="card-link">Start a conversation</a>
             {% if user in request.user.friends.all %}
               <a href="{% url 'users:friend'  user_id=user.id %}" class="card-link text-danger">Remove friend</a>
             {% else %}
